apps/ping-pong/manifests/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "ping-pong"
  namespace: "exercises"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "ping-pong"
  template:
    metadata:
      labels:
        app: "ping-pong"
    spec:
      securityContext:
        fsGroup: 10001
      volumes:
        - name: "shared-data"
          persistentVolumeClaim:
            claimName: "shared-data"
      containers:
        - name: "ping-pong"
          image: "registry:5111/ping-pong"
          volumeMounts:
            - name: "shared-data"
              mountPath: "/usr/share/data"
