apps/ping-pong/manifests/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "ping-pong"
spec:
  type: "ClusterIP"
  selector:
    app: "ping-pong"
  ports:
    - name: "http"
      protocol: "TCP"
      port: 1236
      targetPort: 8095
